small changes to deploy windows os

--- a/lib/project_razor/model/windows/7600/windowsunattended_xml.erb
+++ b/lib/project_razor/model/windows/7600/windowsunattended_xml.erb
@@ -28,7 +28,7 @@
       <InstallFrom>
        <MetaData wcm:action="add">
         <Key>/IMAGE/NAME</Key>
-        <Value>Windows Server 2008 R2 SERVERDATACENTER</Value>
+        <Value><%= @imagetodeploy %></Value>
        </MetaData>
       </InstallFrom>
       <InstallTo>
